metadata1/unpackaged/objects/ATI_Job__c.object
<CustomObject>
    <fields>
        <fullName>Is_AE2_s_Mgr_s_Mgr_the_Logged_In_User__c</fullName>
        <formula>IF( Account_Executive_2__r.Manager.Manager.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE2&apos;s Mgr&apos;s Mgr&apos;s Mgr Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE2_the_Logged_in_User__c</fullName>
        <formula>IF(  Account_Executive_2__c  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE2 the Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AE2s_Manager_s_Mgr_the_Logged_In_User__c</fullName>
        <formula>IF( Account_Executive_2__r.Manager.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE2s Manager&apos;s Mgr the Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BDM1_Active__c</fullName>
        <formula>IF(  Account_Executive_1__r.IsActive  = TRUE,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BDM1 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BDM1_s_Office_Same_as_Logged_In_User__c</fullName>
        <formula>IF( TEXT(Account_Executive_1__r.Office__c) =  TEXT($User.Office__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BDM1&apos;s Office Same as Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BDM2_Active__c</fullName>
        <formula>IF( Account_Executive_2__r.IsActive = TRUE,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BDM2 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BDM2_s_Office_Same_as_Logged_In_User__c</fullName>
        <formula>IF( TEXT(Account_Executive_2__r.Office__c) = TEXT($User.Office__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BDM2&apos;s Office Same as Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BDM_the_Logged_in_User__c</fullName>
        <formula>IF(  Business_Development_Manager__c  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is BDM the Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Collector_the_logged_in_User__c</fullName>
        <formula>IF (  Project_Manager__r.Collector__c = $User.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Collector the logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manager_s_Manager_the_Logged_In_User__c</fullName>
        <formula>IF( Account_Executive_1__r.Manager.ManagerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AE1&apos;s Manager&apos;s Mgr Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Office_Same_as_Logged_In_User_Office__c</fullName>
        <formula>IF ( Office2__r.Name = TEXT($User.Office__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Office Same as Logged In User Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PD_the_Logged_in_User__c</fullName>
        <formula>IF(  Project_Manager__c  = $User.Id,True,False)</formula>
        <label>Is PD the Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PM_the_Logged_in_User__c</fullName>
        <formula>IF(  Project_Manager_new__c  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PM the Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RM_The_Logged_in_User__c</fullName>
        <formula>IF(  Branch_Manager__c = $User.Id,True,False)</formula>
        <label>Is RM The Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JC_Adjustment__c</fullName>
        <description>Dollar difference between actual and forecast GP.</description>
        <formula>Round((( Job_to_Date_Work_Billed_Next_Month_RS__c  * (1- Estimated_Gross_Profit_RS__c ))- Job_to_Date_Costs_Next_Month_Costs_RS__c ),-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JC Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JC_Category__c</fullName>
        <description>Codes for Division</description>
        <formula>if( ISPICKVAL(Division__c ,&quot;Structure&quot;),&quot;S&quot;,&quot;L&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JC Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JTD_Costs_YTD_Costs__c</fullName>
        <label>JTD Costs - YTD Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JTD_NM_GP_RS__c</fullName>
        <label>Job-to-Date - NM GP%</label>
        <summarizedField>Financial__c.JTD_NM_GP__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JTD_NM_Profit_RS__c</fullName>
        <label>Job-to-Date - NM GP</label>
        <summarizedField>Financial__c.JTD_NM_Profit__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JTD_Profit_RS__c</fullName>
        <label>Job-to-Date GP</label>
        <summarizedField>Financial__c.JTD_Profit__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Account_Names__c</fullName>
        <label>Job Account Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <description>Category of job</description>
        <label>Job Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hurricane Florence</fullName>
                </value>
                <value>
                    <fullName>Hurricane Harvey</fullName>
                </value>
                <value>
                    <fullName>Hurricane Irma</fullName>
                </value>
                <value>
                    <fullName>Napa Earthquake</fullName>
                </value>
                <value>
                    <fullName>AZ 0914 Monsoon</fullName>
                </value>
                <value>
                    <fullName>Wine Country Fires</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <description>Indicator of job classification/industry</description>
        <label>Job Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Municipality/ Gov&apos;t</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>Educational - Public</fullName>
                </value>
                <value>
                    <fullName>Educational - Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Lost_Date__c</fullName>
        <description>Date/Time field to record when the job is updated to Lost stage for reporting purposes.</description>
        <label>Job Lost Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Name_Length__c</fullName>
        <description>This field counts the number of characters of the Job Name.</description>
        <formula>LEN( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Job Name field is used on New Job VF page, used to pass along to Timberline, and used to update Opportunity Name field via &apos;Opportunity Naming Convention&apos; workflow.</description>
        <label>Job Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Compare__c</fullName>
        <formula>Name &lt;&gt; Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number Compare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number_Last_5__c</fullName>
        <formula>VALUE(RIGHT( Job_Number__c , 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number Last 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number_No_Dash_Last_5__c</fullName>
        <description>Last 5 digits of Job number without dashes</description>
        <formula>VALUE( RIGHT( Job_Number_No_Dashes__c , 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number No Dash Last 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number_No_Dashes__c</fullName>
        <description>A hidden field used to allow for searching on the job number without dashes</description>
        <externalId>true</externalId>
        <inlineHelpText>SYSTEM USE ONLY - Please do not modify</inlineHelpText>
        <label>Job Number (No Dashes)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Sequence_Group__c</fullName>
        <description>SYSTEM USE ONLY. Used to categorize sequential values. Each group has its own job sequence</description>
        <inlineHelpText>SYSTEM USE ONLY.</inlineHelpText>
        <label>Job Number Sequence Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Sequence__c</fullName>
        <description>Contains the sequential aspect of the job number for this job. This is pulled from the lead record and should not be manually updated.</description>
        <externalId>true</externalId>
        <label>Job Number Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <description>Job unique identifier/external ID populated via code.  Numbers are representative of Office, Division, PM ID, and Year.</description>
        <externalId>true</externalId>
        <label>Job Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Opportunity_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for job opportunity matching review only. Temporary. Will delete this after review is completed.</description>
        <label>Job Opportunity Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Prev_Name__c</fullName>
        <label>Job Prev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Prev_Number__c</fullName>
        <label>Job Prev Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <description>Field to indicate projected start date of a job</description>
        <inlineHelpText>Auto time stamped when the job is marked won.</inlineHelpText>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Program field to check on the status of the job, not stages</description>
        <label>Job Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Subclass__c</fullName>
        <label>Job Subclass</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Job_Vertical__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airports</fullName>
                </value>
                <value>
                    <fullName>Amusement Park</fullName>
                </value>
                <value>
                    <fullName>Apartment/s</fullName>
                </value>
                <value>
                    <fullName>Big Box Store</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>City Hall</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>Condo&apos;s</fullName>
                </value>
                <value>
                    <fullName>Convention Center</fullName>
                </value>
                <value>
                    <fullName>Day-Care</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>Discount Store</fullName>
                </value>
                <value>
                    <fullName>Drug Store</fullName>
                </value>
                <value>
                    <fullName>FBI</fullName>
                </value>
                <value>
                    <fullName>Federal Departments</fullName>
                </value>
                <value>
                    <fullName>Fire Departments</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Gym/Sports Club/Fitness Center</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Hotel, Motel, Lodge</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>K-12 Schools</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Medical Building</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Mobile Home Park</fullName>
                </value>
                <value>
                    <fullName>National Park Service</fullName>
                </value>
                <value>
                    <fullName>Office Building</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Police/Sheriff Departments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>Job Type populated by workflow &apos;Job Type update&apos; to be used in bonus calculations</description>
        <label>Job Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Vertical__c</fullName>
        <label>Job Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>State &amp; Municipality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_to_Date_Adjustments_RS__c</fullName>
        <label>Job-to-Date Adjustments</label>
        <summarizedField>Financial__c.Job_to_Date_Adjustments__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Cost_Workflow_Field__c</fullName>
        <label>Job to Date Cost Workflow Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs_Next_Month_Costs_RS__c</fullName>
        <label>Job-to-Date Costs - NM</label>
        <summarizedField>Financial__c.Job_to_Date_Costs_Next_Month_Costs__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs_RS__c</fullName>
        <label>Job-to-Date Costs</label>
        <summarizedField>Financial__c.Job_to_Date_Costs__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_GP_Percent_RS__c</fullName>
        <label>Job-to-Date GP%</label>
        <summarizedField>Financial__c.Job_to_Date_GP_Percent__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Payments_AR_RS__c</fullName>
        <label>Job-to-Date Payments-AR</label>
        <summarizedField>Financial__c.Job_to_Date_Payments__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed_Next_Month_RS__c</fullName>
        <label>Job-to-Date Work Billed - NM</label>
        <summarizedField>Financial__c.Job_to_Date_Work_Billed_Next_Month__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed_RS__c</fullName>
        <label>Job-to-Date Work Billed</label>
        <summarizedField>Financial__c.Job_to_Date_Work_Billed__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ladder_Assist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder Assist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_FotoIn_Update__c</fullName>
        <label>Last FotoIn Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Month_Costs_RS__c</fullName>
        <label>Last Month Costs</label>
        <summarizedField>Financial__c.Last_Month_Costs__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Month_Work_Billed_RS__c</fullName>
        <label>Last Month Work Billed</label>
        <summarizedField>Financial__c.Last_Month_Work_Billed__c</summarizedField>
        <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Successful_FotoIn_Update__c</fullName>
        <label>Last Successful FotoIn Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberline_Forecast_Sync__c</fullName>
        <description>Last successful push of Timberline fields being populated into SFDC Forecast Analysis section.</description>
        <label>Last Successful Timberline Forecast Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberline_Update__c</fullName>
        <description>Date of last successful Timberline update.</description>
        <label>Last Successful Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Timberline_Update__c</fullName>
        <description>Field to indicate the last Timberline update</description>
        <label>Last Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_RRP_Apply__c</fullName>
        <label>Lead RRP Apply?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Rejection_Reason__c</fullName>
        <label>Lead Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Opportunity Name</fullName>
                </value>
                <value>
                    <fullName>Incorrect Account</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>Incorrect Project Site Contact Name</fullName>
                </value>
                <value>
                    <fullName>Project Site Contact Email Missing or Invalid</fullName>
                </value>
                <value>
                    <fullName>Incorrect Lead Source</fullName>
                </value>
                <value>
                    <fullName>Claim # Missing or Invalid</fullName>
                </value>
                <value>
                    <fullName>Cont. P.O./Client Job # Missing or Invalid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising and Publications</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Building Consultant</fullName>
                </value>
                <value>
                    <fullName>Consulting Firm</fullName>
                </value>
                <value>
                    <fullName>Employee - Friends or Family Referral</fullName>
                </value>
                <value>
                    <fullName>Environmental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Facilities Management/Building Engineer</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Government or Municipality</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Independent Adjusting Company</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Insurance Broker</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>National Account (ERA, Contract, Etc)</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity REO</fullName>
                </value>
                <value>
                    <fullName>Program - Alacrity Services</fullName>
                </value>
                <value>
                    <fullName>Program - American Emergency Services</fullName>
                </value>
                <value>
                    <fullName>Program - ASI Claims</fullName>
                </value>
                <value>
                    <fullName>Program - BrightServ</fullName>
                </value>
                <value>
                    <fullName>Program - CC Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Program - Code Blue Network</fullName>
                </value>
                <value>
                    <fullName>Program - Contractor Connection</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Assignment</fullName>
                </value>
                <value>
                    <fullName>Program - Direct Claims Management (DCMG)</fullName>
                </value>
                <value>
                    <fullName>Program - IMACC</fullName>
                </value>
                <value>
                    <fullName>Program - Innovation Property</fullName>
                </value>
                <value>
                    <fullName>Program - Lionsbridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Job ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <inlineHelpText>Likelihood of winning the job</inlineHelpText>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Amount__c</fullName>
        <formula>If (ISPICKVAL(Stage__c, &quot;Lost&quot;), Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Count__c</fullName>
        <description>If job record is Lost, this is used to count the number of lost jobs</description>
        <formula>IF (ISPICKVAL( Stage__c ,&quot;Lost&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Job_Description__c</fullName>
        <description>Description on why a opportunity/job was lost if &apos;Lost Reason&apos; of &quot;Other&quot; is chosen.</description>
        <label>Lost Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Job_Reason__c</fullName>
        <description>Reasons for losing a job</description>
        <label>Lost Job Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Cashed Out</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Declined to Bid</fullName>
                </value>
                <value>
                    <fullName>Lack of Funding</fullName>
                </value>
                <value>
                    <fullName>Deductible Issues</fullName>
                </value>
                <value>
                    <fullName>Adjuster&apos;s Contractor</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict</fullName>
                </value>
                <value>
                    <fullName>Preferred a Competitor</fullName>
                </value>
                <value>
                    <fullName>Canceled by carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <label>Lost</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MICA_Error_Message__c</fullName>
        <label>MICA Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICA_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MICA_Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICA_Last_Successful_Sync__c</fullName>
        <label>MICA Last Successful Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ML_Amount__c</fullName>
        <label>ML Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ML_Recording_Date__c</fullName>
        <label>ML Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ML_Recording_Number__c</fullName>
        <label>ML Recording Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ML_Release_Recording_Date__c</fullName>
        <label>ML Release Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ML_Request_Date__c</fullName>
        <label>ML Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ManualSurveySend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManualSurveySend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Job</label>
        <referenceTo>Master_Job__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Allocations__c</fullName>
        <label>Modified Allocations</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>